# src/swagger-static/swagger.json
@@ -122,6 +122,61 @@
         ]
       }
     },
+    "/user/address/find": {
+      "get": {
+        "operationId": "UserController_getAddress",
+        "parameters": [
+          {
+            "name": "page",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "limit",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "user"
+        ]
+      }
+    },
+    "/user/address": {
+      "post": {
+        "operationId": "UserController_createAddress",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateAddressDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "user"
+        ]
+      }
+    },
     "/auth/signup": {
       "post": {
         "operationId": "AuthController_signUp",
@@ -311,6 +366,76 @@
         },
         "tags": [
           "role"
+        ]
+      }
+    },
+    "/address/country": {
+      "get": {
+        "operationId": "AddressController_findAll",
+        "parameters": [
+          {
+            "name": "page",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "limit",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "address"
+        ]
+      }
+    },
+    "/address/city": {
+      "get": {
+        "operationId": "AddressController_findAllCity",
+        "parameters": [
+          {
+            "name": "page",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "limit",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "iso3",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "address"
         ]
       }
     },
@@ -1333,6 +1458,33 @@
         "required": [
           "isActive",
           "balance"
+        ]
+      },
+      "CreateAddressDto": {
+        "type": "object",
+        "properties": {
+          "zipcode": {
+            "type": "string"
+          },
+          "streetNumber": {
+            "type": "string"
+          },
+          "streetName": {
+            "type": "string"
+          },
+          "countryId": {
+            "type": "number"
+          },
+          "cityName": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "zipcode",
+          "streetNumber",
+          "streetName",
+          "countryId",
+          "cityName"
         ]
       },
       "SignupUserDto": {
